alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,11 @@ h1 {
   font-size: 18px;
   /* border: solid; */
   border-radius: 50px;
-  position: absolute;
+  position: relative;
   color: rgb(108, 70, 79);
-  width: 60%;
-  left: 50%;
-  top: 40%;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  margin-top: 10%;
   padding: 5%;
   padding-bottom: 10%;
 }
@@ -38,10 +37,11 @@ form {
   padding: 10px;
 }
 
+/* TODO: Fix alignment of input on large/small screen */
 .check-input {
   border: none;
   background-color: rgb(235, 210, 188);
-  width: 70%;
+  width: 500px;
 }
 .check-input:focus {
   outline: none;
